# geniac-demo

./: CHANGELOG  README.md  main.nf  main.template.nf  nextflow.config
conf/: README.md  base.config  conda.config  docker.config  geniac.config  multiconda.config  path.config  process.config  singularity.config  test.config
docs/: usage.md
modules/: CMakeLists.txt
modules/fromSource/: CMakeLists.txt
recipes/conda/: trickySoftware.yml
test/: design.csv  metadata.tsv
test/misc/: main.nf.misc
test/misc/conf/: geniac.config
test/misc/modules/fromSource/: CMakeLists.txt
test/misc/modules/fromSource/bamcmp/: CMakeLists.txt  bamcmp.sh
